--- a/slides/09-hpc/slides.Rmd
+++ b/slides/09-hpc/slides.Rmd
@@ -56,7 +56,7 @@ We will mostly focus on parallel computing.
 <div align="center">
 <figure>
 <img src="fig/pll-computing-explained-parallel.svg" style="width:50%">
-<figcaption>In this more intelligent way of computation, we are taking full advantage of our computer by using all 4 cores at the same time. This will translate in a reduced computation time which, in the case of complicated/long calculations, can be an important speed gain.</figcaption>
+<figcaption>In this more intelligent way of computation, we are taking full advantage of our computer by using all 4 cores at the same time. This will reduce computation time which, in the case of complicated/long calculations, can be an important speed gain.</figcaption>
 </figure>
 </div>
 
@@ -66,15 +66,15 @@ We will mostly focus on parallel computing.
 
 ## Parallel computing: Hardware
 
-When it comes to parallel computing, there are several ways (levels) in which we can speed up our analysis. From the Bottom up:
+When it comes to parallel computing, there are several ways (levels) in which we can speed up our analysis. From the bottom up:
 
-- **[Thread level SIMD instructions](https://en.wikipedia.org/wiki/Vector_processor)**: In most modern processors support some level of what is called vectorization, this is, applying a single (same) instruction to streams of data, for example: adding vector `A` and `B`.
+- **[Thread level SIMD instructions](https://en.wikipedia.org/wiki/Vector_processor)**: Most modern processors support some level of what is called vectorization, this is, applying a single (same) instruction to streams of data. For example: adding vector `A` and `B`.
 
-- **[Hyper-Tthreading Technology](https://en.wikipedia.org/wiki/Hyper-threading)** (HTT): Intel's hyper-threading generates a virtual partition of a single core (processor) which, while not equivalent to having multiple physical threads, does speedup things.
+- **[Hyper-Threading Technology](https://en.wikipedia.org/wiki/Hyper-threading)** (HTT): Intel's hyper-threading generates a virtual partition of a single core (processor) which, while not equivalent to having multiple physical threads, does speed things up.
 
 - **[Multi-core processor](https://en.wikipedia.org/wiki/Multi-core_processor)**: Most modern CPUs (Central Processing Unit) have two or more physical cores. A typical laptop computer has about 8 cores.
 
-- **[General-Purpose Computing on Graphics Processing Unit](https://en.wikipedia.org/wiki/General-purpose_computing_on_graphics_processing_units)** (GP-GPU): While modern CPUs have a couple of dozens of cores, GPUs can hold thousands of those. Designed for image processing, there's an increasing use of GPUs as an alternative of CPUs for scientific computing.
+- **[General-Purpose Computing on Graphics Processing Unit](https://en.wikipedia.org/wiki/General-purpose_computing_on_graphics_processing_units)** (GP-GPU): While modern CPUs have multiple cores, GPUs can hold thousands of cores. Designed for image processing, there's an increasing use of GPUs as an alternative to CPUs for scientific computing.
 
 - **[High-Performance Computing Cluster](https://en.wikipedia.org/wiki/Computer_cluster)** (HPC): A collection of computing nodes that are interconnected using a fast Ethernet network.
 
@@ -138,7 +138,7 @@ And there's also a more advanced set of options
    
 ---
     
-## The parallel package
+## The {parallel} package
 
 *  Based on the `snow` and `multicore` R Packages.
 
@@ -159,17 +159,19 @@ And there's also a more advanced set of options
 (Usually) We do the following:
 
 1.  Create a `PSOCK/FORK` (or other) cluster using `makePSOCKCluster`/`makeForkCluster`
-    (or `makeCluster`)
+    (or simply `makeCluster`)
     
 2.  Copy/prepare each R session (if you are using a `PSOCK` cluster):
 
     a.  Copy objects with `clusterExport`
 
-    b.  Pass expressions with `clusterEvalQ`
+    b.  Set a seed with `clusterSetRNGStream`
 
-    c.  Set a seed
+3.  Do your call:
 
-3.  Do your call: `parApply`, `parLapply`, etc. 
+    a.  Pass expressions with `clusterEvalQ`
+    
+    b.  Run a parallelized loop with `parApply`, `parLapply`, etc.
 
 4.  Stop the cluster with `clusterStop`
 
@@ -180,11 +182,11 @@ And there's also a more advanced set of options
 ```{r parallel-ex-psock, echo=TRUE, cache=TRUE}
 # 1. CREATING A CLUSTER
 library(parallel)
-cl <- makePSOCKcluster(4)    
+cl <- makeCluster(4)    
 x  <- 20
 
 # 2. PREPARING THE CLUSTER
-clusterSetRNGStream(cl, 123) # Equivalent to `set.seed(123)`
+clusterSetRNGStream(cl, 123) # Equivalent to `set.seed(123)` (not necessary for this example)
 clusterExport(cl, "x")
 
 # 3. DO YOUR CALL
@@ -198,10 +200,26 @@ stopCluster(cl)
 
 ---
 
+## Ex 1: Hello world! (redux)
+
+Multi-core versions of the `*apply` functions are simpler, but may not work on Windows machines.
+
+```{r parallel-ex-mclap, echo=TRUE, cache=TRUE}
+# 1. SETUP
+library(parallel)
+x  <- 20
+
+# 2. DO YOUR CALL
+mclapply(1:4, function(i){
+    paste0("Hello from process #", Sys.getpid(), ". I see x and it is equal to ", x)
+}, mc.cores = 4)
+```
+
+---
+
 ## Ex 2: Parallel regressions
 
-**Problem**: Run multiple regressions on a very wide dataset. We need to fit the
-following model:
+**Problem**: Run multiple regressions on a very wide dataset. We need to fit the following model:
 
 $$
 y = X_i\beta_i + \varepsilon,\quad \varepsilon\sim N(0, \sigma^2_i),\quad\forall i
@@ -223,18 +241,17 @@ str(y)
 
 ## Ex 2: Parallel regressions (cont'd 1)
 
-**Serial solution**: Use `apply` (forloop) to solve it
+**Serial solution**: Use `apply` (basic loop) to solve it
 
 ```{r lots-of-lm-serial, cache = FALSE, strip.white=FALSE}
 #
 #
 #
 ans <- apply(
-  
-  X      = X,
+  X = X,
   MARGIN = 2,
-  FUN    = function(x) coef(lm(y ~ x))
-  )
+  FUN = function(x) coef(lm(y ~ x))
+)
 
 ans[,1:5]
 ```
@@ -247,33 +264,35 @@ ans[,1:5]
 
 ```{r lots-of-lm-parallel, cache = FALSE}
 library(parallel)
-cl <- makePSOCKcluster(4L)
+cl <- makeCluster(4L)
 clusterExport(cl, "y")
 ans <- parApply(
-  cl     = cl,
-  X      = X,
+  cl = cl,
+  X = X,
   MARGIN = 2,
-  FUN    = function(x) coef(lm(y ~ x))
-  )
+  FUN = function(x) coef(lm(y ~ x))
+)
  
 ans[,1:5]
 ```
 
 ---
 
+## Ex 2: Parallel regressions (cont'd 3)
+
 Are we going any faster?
 
 ```{r lots-of-lm-benchmark, cache = TRUE, warning=FALSE, dependson=-1}
 microbenchmark::microbenchmark(
   parallel = parApply(
-    cl  = cl,
-    X   = X, MARGIN = 2,
+    cl = cl,
+    X = X, MARGIN = 2,
     FUN = function(x) coef(lm(y ~ x))
-    ),
+  ),
   serial = apply(
-    X   = X, MARGIN = 2,
+    X = X, MARGIN = 2,
     FUN = function(x) coef(lm(y ~ x))
-    ), unit="relative"
+  ), unit="relative"
 )
 ```
 
@@ -291,21 +310,21 @@ stopCluster(cl)
 
 An altered version of [Conway's game of life](https://en.wikipedia.org/wiki/Conway's_Game_of_Life)
 
-1. People live in torus, each individual having 8 neighbors.
+1. People live on a grid, each individual having 8 neighbors.
 
-2. A healthy individual interacting with a sick neighbor has the following probabilities of contracting the disease:
+2. A healthy individual (A) interacting with a sick neighbor (B) has the following probabilities of contracting the disease:
 
-   a. 100% if neither wears a face-mask.
+   a. 100% if neither wears a mask.
    
-   b. 50% if only he wears the face-mask.
+   b. 50% if only A wears a mask.
    
-   c. 20% if only his neighbor wears the mask.
+   c. 20% if only B wears a mask.
    
-   d. 5% if both wear the face-mask.
+   d. 5% if both wear masks.
     
 4. Infected individuals may die with probability 10%.
   
-We want to illustrate the importance of wearing face masks. We need to simulate a system with 2,500 (50 x 50) individuals, 1,000 times so we can analyze: (a) contagion curve, (b) death curve.
+We want to illustrate the importance of wearing face masks. We are going to simulate a system with 2,500 (50 x 50) individuals, 1,000 times so we can analyze: (a) contagion curve, (b) death curve.
 
 More models like this: The [SIRD model](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology#The_SIRD_model) (Susceptible-Infected-Recovered-Deceased)
 
@@ -316,7 +335,7 @@ More models like this: The [SIRD model](https://en.wikipedia.org/wiki/Compartmen
 Download the program [here](sars-cov2.R).
 
 ```{r covid-program, echo = TRUE, eval=TRUE}
-source("sars-cov2.R", echo=FALSE)
+source("~/Downloads/sars-cov2.R", echo=FALSE)
 
 # Looking at some constants
 probs_sick # Sick individual's probabilities
@@ -325,24 +344,24 @@ probs_susc # Probabilities of i getting the disease
 
 ---
 
-## First look: How does the simulation looks like?
+## First look: What does the simulation look like?
 
 ```{r first-look}
 set.seed(7123)
 one <- simulate_covid(
-    pop_size    = 1600,
-    nsick       = 160,
+    pop_size = 1600,
+    nsick = 160,
     nwears_mask = 1:400,
-    nsteps      = 20,
-    store       = TRUE
-    )
+    nsteps = 20,
+    store = TRUE
+)
 
 one$statistics[c(1:5, 16:20),]
 ```
 
 ---
 
-## First look: How does the simulation looks like? (contd')
+## First look: What does the simulation look like? (contd')
 
 ```{r covid-animation, eval=FALSE, echo=TRUE}
 # Location of who wears the facemask. This step is only for plotting
@@ -362,9 +381,9 @@ for (i in 1:one$current_step) {
   points(wears, col="white", pch=20, cex=1.5)
   legend(
     "topright",
-    col    = c("gray", "tomato", "steelblue","black", "black"),
+    col = c("gray", "tomato", "steelblue","black", "black"),
     legend = c(names(codes), "wears a mask"),
-    pch    = c(rep(15, 4), 21)
+    pch = c(rep(15, 4), 21)
   )
 }
 
@@ -377,7 +396,7 @@ magick::image_write(animation, "covid1.gif")
 
 ---
 
-<video controls width="400" height="400">
+<video controls width="500" height="500">
 <source type="video/webm" src="fig/covid1.webm">
 </video>
 
@@ -422,25 +441,32 @@ stats_nobody_wears_masks <- do.call(rbind, stats_nobody_wears_masks)
 stats_half_wears_masks <- do.call(rbind, stats_half_wears_masks)
 stats_all_wears_masks <- do.call(rbind, stats_all_wears_masks)
 
-boxplot(stats_nobody_wears_masks, col = "tomato")
+boxplot(stats_nobody_wears_masks, col = "tomato",
+        ylab = "Cumulative Deaths", xlab = "Step")
 boxplot(stats_half_wears_masks, add = TRUE, col = "gray")
 boxplot(stats_all_wears_masks, add = TRUE, col = "steelblue")
+legend(
+  "topleft",
+  fill = c("tomato", "gray", "steelblue"),
+  title = "Wears mask:",
+  legend = c("Nobody","Half","Everybody"),
+)
 ```
 
 ---
 
 ## Speed things up: Timing under the serial implementation
 
-We will use the function `system.time` to measure how much time it takes to complete 20 simulations in serial versus paralle fashion using 4 cores
+We will use the function `system.time` to measure how much time it takes to complete 20 simulations in serial versus parallel fashion using 4 cores.
 
 ```{r timing1, cache=TRUE}
 time_serial <- system.time({
   ans_serial <- replicate(50, {
     simulate_covid(
-      pop_size    = 900,
-      nsick       = 10,
+      pop_size = 900,
+      nsick = 10,
       nwears_mask = 900,
-      nsteps      = 20)$statistics[,"deceased"]
+      nsteps = 20)$statistics[,"deceased"]
     },
     simplify = FALSE
     )
@@ -451,18 +477,17 @@ time_serial <- system.time({
 
 ## Speed things up: Parallel a Forking Cluster
 
-Alternative 1: If you are using Unix-like system (Ubuntu, OSX, etc.), you can
-take advantage of process forking, and thus, parallel's `mclapply` function:
+Alternative 1: If you are using Unix-like system (Ubuntu, OSX, etc.), you can take advantage of process forking, and thus, parallel's `mclapply` function:
 
 ```{r timing-mclapply, cache=TRUE}
 set.seed(1231)
 time_parallel_fork <- system.time({
   ans_parallel <- parallel::mclapply(1:50, function(i) {
     simulate_covid(
-      pop_size    = 900,
-      nsick       = 10,
+      pop_size = 900,
+      nsick = 10,
       nwears_mask = 900,
-      nsteps      = 20)$statistics[,"deceased"]
+      nsteps = 20)$statistics[,"deceased"]
     }, mc.cores = 2L
   )
 })
@@ -473,9 +498,7 @@ time_parallel_fork <- system.time({
 ## Speed things up: Parallel with a Socket Cluster
 
 
-Alternative 2: Regardless of the operating system, we can use a Socket cluster,
-which is simply a group of fresh R sessions that listen to the parent/main/mother 
-session.
+Alternative 2: Regardless of the operating system, we can use a Socket cluster, which is simply a group of fresh R sessions that listen to the parent/main/mother session.
 
 ```{r}
 # Step 1: Make the cluster
@@ -544,7 +567,15 @@ parallel::stopCluster(cl)
 Using two threads/processes, you can obtain the following speedup
 
 ```{r}
-time_serial;time_parallel_sock;time_parallel_fork
+time_serial
+```
+
+```{r}
+time_parallel_sock
+```
+
+```{r}
+time_parallel_fork
 ```
 
 ---
@@ -555,7 +586,7 @@ time_serial;time_parallel_sock;time_parallel_fork
 
 ## Cloud Computing (a.k.a. on-demand computing)
 
-HPC clusters, super-computers, etc. need not to be bought... you can rent:
+HPC clusters, super-computers, etc. need not be bought... you can rent:
 
 - [Amazon Web Services (AWS)](https://aws.amazon.com)
 
@@ -574,7 +605,7 @@ These services provide more than just computing (storage, data analysis, etc.). 
 At USC:
 
 - Center for Advanced Research Computing (CARC). USC users can request hundreds
-  of cores (literally). Take a look at the [slurmR package](https://cran.r-project.org/package=slurmR)
+  of cores (literally).
 
 Running R in:
 
@@ -586,9 +617,9 @@ Running R in:
 
 ## Submitting jobs
 
-- A key feature of cloud services > interact via command line.
+- A key feature of cloud services: interact via command line.
 
-- You will need to familiarize with `Rscript` and `R CMD BATCH`.
+- You will need to be familiar with `Rscript` and `R CMD BATCH`.
 
 - Which is better? It depends on the application.
 
@@ -617,24 +648,21 @@ R CMD BATCH --vanilla dummy.R dummy.Rout &
 **Rscript**
 
 This will also execute R in the background, with the difference that
-the output `dummy.Rout` will not capture `stderr` (messages, warnings and
-errors from R).
+the output `dummy.Rout` will not capture `stderr` (messages, warnings and errors from R).
 
 ```
 Rscript --vanilla dummy.R > dummy.Rout &
 ```
 
 The `&` at the end makes sure the job is submitted and does not wait for it to end.
-Try it yourself (5 mins)!
 
 ---
 
 ## Rscript
 
-The R script can be executed as program directly, if you specify where the
-`Rscript` program lives.
+The R script can be executed as a program directly, if you specify where the `Rscript` program lives.
 
-The following example works in Unix. This is an R script named `since_born.R`
+The following example works on Unix. This is an R script named `since_born.R`
 (download [here](since_born.R))
 
 ```bash
@@ -643,17 +671,16 @@ args <- tail(commandArgs(), 0)
 message(Sys.Date() - as.Date(args), " days since you were born.")
 ```
 
-This R script, can be executed in various ways...
+This R script can be executed in various ways...
 
 ---
 
 ## Rscript as a program
 
 For this we would need to change it to an executable. In unix you can use the
-[chmod](https://wikipedia.org/wiki/chmod) command: `chmod +x since_born.R`. This
-allows to:
+[chmod](https://wikipedia.org/wiki/chmod) command: `chmod +x since_born.R`. This allows us to do the following:
 
-```{bash since-born}
+```{bash since-born, eval=FALSE}
 ./since_born.R 1988-03-02
 ```
 
@@ -661,15 +688,13 @@ allows to:
 
 ## Rscript in a bash script (most common)
 
-In the case of running jobs in a cluster or something similar, we usually need to
-have a bash script, In our case, here we have a file named `since_born_bash.sh`
-that calls `Rscript` (download [here](since_born_bash.sh))
+In the case of running jobs on a cluster or something similar, we usually need to have a bash script. In our case, we have a file named `since_born_bash.sh` that calls `Rscript` (download [here](since_born_bash.sh))
 
 ```bash
 #!/bin/bash
 Rscript since_born.R 1988-03-02
 ```
-Which we would execute something like this
+Which we would execute like this:
 
 ```{bash since-born2}
 sh since_born_bash.sh
@@ -680,21 +705,21 @@ sh since_born_bash.sh
 
 # Summary
 
-- Parallel computing can speedup things.
+- Parallel computing can speed things up.
 
-- Not always needed... need to make sure that you are taking advantage of vectorization.
+- It's not always needed... make sure that you are taking advantage of vectorization.
 
-- Most of the time we look at "Embarrassingly parallel computing."
+- Most loops can be parallelized ("embarrassingly parallel computing").
 
 - In R, explicit parallelism can be achieved using the **parallel** package:
 
-    1. Load the package and create a cluster **parallel::makeCluster()**
+    1. Load the package and create a cluster: **library(parallel)**, **parallel::makeCluster()**
     
-    2. Setup the environment **parallel::clusterEvalQ()**, **parallel::clusterExport()**, and **parallel::clusterSetRNGStream()**
+    2. Setup the environment: **parallel::clusterExport()**, **parallel::clusterSetRNGStream()**
     
-    3. Make the call, e.g., **parallel::parLapply()**
+    3. Make the call: **parallel::clusterEvalQ()**, **parallel::parLapply()**
     
-    4. Stop the cluster **parallel::stopCluster()**
+    4. Stop the cluster: **parallel::stopCluster()**
     
 - Regardless of the Cloud computing service we are using, we will be
 using either `R CMD BATCH` or `Rscript` to submit jobs.
@@ -724,7 +749,7 @@ $$
 
 ---
 
-## Rcpp: Hello world! vers1
+## Rcpp: Hello world! v1
 
 The following C++ file, called `fib.cpp`
 
@@ -743,8 +768,7 @@ int fibCpp(int n) {
 }
 ```
 
-Can be compiled within R using `Rcpp::sourceCpp("fib.cpp")`. This exports the function
-Back into R
+Can be compiled within R using `Rcpp::sourceCpp("fib.cpp")`. This exports the function back into R
 
 ```{r fib-in-r}
 c(fibCpp(1), fibCpp(2), fibCpp(3), fibCpp(4), fibCpp(5))
@@ -752,10 +776,9 @@ c(fibCpp(1), fibCpp(2), fibCpp(3), fibCpp(4), fibCpp(5))
 
 ---
 
-## Rcpp: Hello world! vers2 (with function overloading) 
+## Rcpp: Hello world! v2 (with function overloading) 
 
-Rcpp data types are mapped directly to R data types, e.g. vectors of integer in 
-R can be used as `IntegerVector` in Rcpp.
+Rcpp data types are mapped directly to R data types, e.g. vectors of integers in R can be used as `IntegerVector` in Rcpp.
 
 ```{Rcpp fib-cpp-program2, cache=TRUE}
 #include <Rcpp.h>
@@ -790,21 +813,15 @@ fibCpp(1:5)
 *   Friendlier than [**RcppParallel**](http://rcppcore.github.io/RcppParallel/)...
     at least for 'I-use-Rcpp-but-don't-actually-know-much-about-C++' users (like myself!).
 
-*   Must run only 'Thread-safe' calls, so calling R within parallel blocks can cause
-    problems (almost all the time).
+*   Must run only 'Thread-safe' calls, so calling R within parallel blocks can cause problems (almost all the time).
     
-*   Use `arma` objects, e.g. `arma::mat`, `arma::vec`, etc. Or, if you are used to them
-    `std::vector` objects as these are thread safe.
+*   Use `arma` objects, e.g. `arma::mat`, `arma::vec`, etc. Or, if you are used to them `std::vector` objects as these are thread safe.
 
-*   Pseudo-Random Number Generation is not very straight forward... But C++11 has
-    a [nice set of functions](http://en.cppreference.com/w/cpp/numeric/random) that can be used together with OpenMP
+*   Pseudo-Random Number Generation is not very straight forward... But C++11 has a [nice set of functions](http://en.cppreference.com/w/cpp/numeric/random) that can be used together with OpenMP
 
-*   Need to think about how processors work, cache memory, etc. Otherwise you could
-    get into trouble... if your code is slower when run in parallel, then you probably
-    are facing [false sharing](https://software.intel.com/en-us/articles/avoiding-and-identifying-false-sharing-among-threads)
+*   Need to think about how processors work, cache memory, etc. Otherwise you could get into trouble... if your code is slower when run in parallel, then you probably are facing [false sharing](https://software.intel.com/en-us/articles/avoiding-and-identifying-false-sharing-among-threads)
     
-*   If R crashes... try running R with a debugger (see
-    [Section 4.3 in Writing R extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Checking-memory-access)):
+*   If R crashes... try running R with a debugger (see [Section 4.3 in Writing R extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Checking-memory-access)):
     
     ```shell
     ~$ R --debugger=valgrind
@@ -813,8 +830,7 @@ fibCpp(1:5)
 
 ## RcppArmadillo and OpenMP workflow
 
-1.  Add the following to your C++ source code to use OpenMP, and tell Rcpp that
-    you need to include that in the compiler:
+1.  Add the following to your C++ source code to use OpenMP, and tell Rcpp that you need to include that in the compiler:
     
     ```cpp
     #include <omp.h>
@@ -847,7 +863,8 @@ fibCpp(1:5)
 
 Computing the distance matrix (see `?dist`)
 
-```{Rcpp dist-code, cache=TRUE, echo=TRUE}
+```{Rcpp dist-code, cache=TRUE, echo=TRUE, eval=FALSE}
+#include <Rcpp.h>
 #include <omp.h>
 #include <RcppArmadillo.h>
 // [[Rcpp::depends(RcppArmadillo)]]
@@ -887,7 +904,7 @@ n <- 500
 x <- matrix(rnorm(n*K), ncol=K)
 ```
 
-```{r dist-benchmark, echo=TRUE, cache=TRUE}
+```{r dist-benchmark, echo=TRUE, cache=TRUE, eval=FALSE}
 # Benchmarking!
 microbenchmark::microbenchmark(
   dist(x),                 # stats::dist
@@ -916,14 +933,13 @@ For more, checkout the [CRAN Task View on HPC](https://cran.r-project.org/web/vi
 ## Simulating $\pi$
 
 
-*   We know that $\pi = \frac{A}{r^2}$. We approximate it by randomly adding
-    points $x$ to a square of size 2 centered at the origin.
+*   We know that $\pi = \frac{A}{r^2}$. We approximate it by randomly adding points $x$ to a square of size 2 centered at the origin.
 
 *   So, we approximate $\pi$ as $\Pr\{\|x\| \leq 1\}\times 2^2$
 
 ```{r, echo=FALSE, dev='jpeg', dev.args=list(quality=100), fig.width=6, fig.height=6, out.width='300px', out.height='300px'}
 set.seed(1231)
-p    <- matrix(runif(5e3*2, -1, 1), ncol=2)
+p <- matrix(runif(5e3*2, -1, 1), ncol=2)
 pcol <- ifelse(sqrt(rowSums(p^2)) <= 1, adjustcolor("blue", .7), adjustcolor("gray", .7))
 plot(p, col=pcol, pch=18)
 ```
@@ -950,7 +966,7 @@ pisim <- function(i, nsim) {  # Notice we don't use the -i-
 ```{r parallel-ex2, echo=TRUE, cache=TRUE}
 library(parallel)
 # Setup
-cl <- makePSOCKcluster(4L)
+cl <- makeCluster(4L)
 clusterSetRNGStream(cl, 123)
 
 # Number of simulations we want each time to run
@@ -974,7 +990,7 @@ microbenchmark::microbenchmark(
 
 ## (Bonus) Overview of HPC
 
-Using [Flynn's classical taxonomy](https://en.wikipedia.org/wiki/Flynn%27s_taxonomy), we can classify parallel computing according to the following two dimmensions:
+Using [Flynn's classical taxonomy](https://en.wikipedia.org/wiki/Flynn%27s_taxonomy), we can classify parallel computing according to the following two dimensions:
 
 a. Type of instruction: Single vs Multiple
 
